# PeterCraft

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  operation.md
.github/workflows/: ci.yml  nightly_quality.yml  playable_smoke.yml
docs/: 00_VISION_AND_GUARDRAILS.md  01_ENGINE_STRATEGY.md  02_PRODUCT_REQUIREMENTS.md  03_TECHNICAL_ARCHITECTURE.md  04_PHASE_0_FOUNDATION.md  05_PHASE_1_VERTICAL_SLICE.md  06_PHASE_2_CORE_SYSTEMS.md  07_PHASE_3_AI_AND_COMPANIONS.md  08_PHASE_4_CREATOR_WORKSHOP.md  09_PHASE_5_CONTENT_AND_TOOLS.md  10_PHASE_6_QUALITY_AND_POLISH.md  11_WORLD_CLASS_SHIP_CRITERIA.md  12_MILESTONES_AND_BACKLOG.md  13_PHASE_7_PLAYABLE_RUNTIME.md  14_PHASE_7_0_STABILIZATION_AND_EXECUTION_GATES.md  15_PHASE_7_1_ENGINE_INTEGRATION_AND_ADAPTERS.md  16_PHASE_7_2_PLAYER_CONTROLLER_WORLD_AND_INTERACTION.md  17_PHASE_7_3_COMBAT_AI_AND_MISSION_RUNTIME.md  18_PHASE_7_4_HUD_AUDIO_ART_AND_CONTENT.md  19_PHASE_7_5_WORLD_CLASS_QUALITY_GATES.md  20_PHASE_7_EXECUTION_BACKLOG.md  CODING_STANDARDS.md  README.md
docs/adr/: 0001-o3de-first-engine-baseline.md  0002-module-boundaries.md  0003-portable-data-format.md  0004-save-philosophy.md  0005-scripting-safety-model.md  0006-runtime-modes-and-backend-composition.md  0007-playable-runtime-baseline.md  README.md
docs/execution/: O3DE_RUNTIME_SPIKE.md  PHASE_7_MIGRATION_BOARD.md
docs/playtests/: FINDINGS_LOG.md  PLAYTEST_TEMPLATE.md  README.md
docs/quality/: ACCESSIBILITY_CHECKLIST.md  BUG_TRIAGE_RULES.md  CHILD_FACING_TONE_GUIDE.md  QA_MATRIX.md  QUALITY_REVIEW_TEMPLATE.md  RELEASE_CANDIDATE_POLICY.md  WORLD_BUILDING_GUIDE.md
docs/schemas/: README.md
docs/setup/: O3DE_SETUP.md  ONBOARDING.md  README.md  REPOSITORY_PROTECTION.md  RUNTIME_MODES.md  WINDOWS_SETUP.md
engine-adapters/: CMakeLists.txt  README.md
engine-adapters/include/PeterAdapters/: PlatformServices.h
engine-adapters/o3de/: O3DEPlatformServices.cpp
engine-adapters/src/: NullPlatformServices.cpp
game/: README.md
game/assets/: README.md
game/audio/: README.md
game/code/: CMakeLists.txt  README.md
game/code/app/: CMakeLists.txt  PeterCraftApp.cpp  PeterCraftApp.h  Phase1Slice.cpp  Phase1Slice.h  PlayableSessionController.cpp  PlayableSessionController.h  main.cpp
game/code/common/: README.md
game/code/common/cmake/: PeterBuild.cmake
game/code/common/include/PeterTest/: TestMacros.h
game/code/gems/PeterAI/: CMakeLists.txt  README.md
game/code/gems/PeterAI/include/PeterAI/: AiModule.h  CompanionAi.h
game/code/gems/PeterAI/src/: AiModule.cpp  CompanionAi.cpp
game/code/gems/PeterCombat/: CMakeLists.txt  README.md
game/code/gems/PeterCombat/include/PeterCombat/: CombatModule.h  EncounterSimulator.h
game/code/gems/PeterCombat/src/: CombatModule.cpp  EncounterSimulator.cpp
game/code/gems/PeterCore/: CMakeLists.txt  README.md
game/code/gems/PeterCore/include/PeterCore/: CoreModule.h  CreatorContentStore.h  EventBus.h  FeatureRegistry.h  ProfileService.h  QualityProfile.h  SaveDomainStore.h  SliceTypes.h  StableId.h  StructuredStore.h
game/code/gems/PeterCore/src/: CoreModule.cpp  CreatorContentStore.cpp  EventBus.cpp  FeatureRegistry.cpp  ProfileService.cpp  QualityProfile.cpp  SaveDomainStore.cpp  StableId.cpp  StructuredStore.cpp
game/code/gems/PeterDebug/: CMakeLists.txt  README.md
game/code/gems/PeterDebug/include/PeterDebug/: DebugModule.h  DebugOverlay.h
game/code/gems/PeterDebug/src/: DebugModule.cpp  DebugOverlay.cpp
game/code/gems/PeterInventory/: CMakeLists.txt  README.md
game/code/gems/PeterInventory/include/PeterInventory/: InventoryModule.h  InventoryState.h
game/code/gems/PeterInventory/src/: InventoryModule.cpp  InventoryState.cpp
game/code/gems/PeterProgression/: CMakeLists.txt  README.md
game/code/gems/PeterProgression/include/PeterProgression/: Crafting.h  ProgressionModule.h
game/code/gems/PeterProgression/src/: Crafting.cpp  ProgressionModule.cpp
game/code/gems/PeterTelemetry/: CMakeLists.txt  README.md
game/code/gems/PeterTelemetry/include/PeterTelemetry/: JsonlTelemetrySink.h  QualityMetrics.h  TelemetryModule.h
game/code/gems/PeterTelemetry/src/: JsonlTelemetrySink.cpp  QualityMetrics.cpp  TelemetryModule.cpp
game/code/gems/PeterTools/: CMakeLists.txt  README.md
game/code/gems/PeterTools/include/PeterTools/: ScenarioHarness.h  ToolsModule.h
game/code/gems/PeterTools/src/: ScenarioHarness.cpp  ToolsModule.cpp
game/code/gems/PeterTraversal/: CMakeLists.txt  README.md
game/code/gems/PeterTraversal/include/PeterTraversal/: TraversalModule.h  TraversalProfile.h
game/code/gems/PeterTraversal/src/: TraversalModule.cpp  TraversalProfile.cpp
game/code/gems/PeterUI/: CMakeLists.txt  README.md
game/code/gems/PeterUI/include/PeterUI/: MenuModel.h  SlicePresentation.h  UiModule.h
game/code/gems/PeterUI/src/: MenuModel.cpp  SlicePresentation.cpp  UiModule.cpp
game/code/gems/PeterValidation/: CMakeLists.txt  README.md
game/code/gems/PeterValidation/include/PeterValidation/: ValidationModule.h
game/code/gems/PeterValidation/src/: ValidationModule.cpp
game/code/gems/PeterWorkshop/: CMakeLists.txt  README.md
game/code/gems/PeterWorkshop/include/PeterWorkshop/: CreatorWorkshop.h  WorkshopModule.h  WorkshopTuning.h
game/code/gems/PeterWorkshop/src/: CreatorWorkshop.cpp  WorkshopModule.cpp  WorkshopTuning.cpp
game/code/gems/PeterWorld/: CMakeLists.txt  README.md
game/code/gems/PeterWorld/include/PeterWorld/: ContentCatalog.h  SceneShell.h  SliceContent.h  WorldModule.h  WorldQueryService.h
game/code/gems/PeterWorld/src/: ContentCatalog.cpp  SceneShell.cpp  SliceContent.cpp  WorldModule.cpp  WorldQueryService.cpp
game/data/: README.md
game/o3de/: CMakeLists.txt  export.bat  export.sh  project.json  project.json.bak0
tests/: CMakeLists.txt  README.md
tests/integration/: PeterFoundationIntegrationTests.cpp  PeterPlayableRuntimeIntegrationTests.cpp  README.md
tests/scenarios/: PeterScenarioTests.cpp  README.md
tests/smoke/: README.md
tests/unit/: PeterCoreUnitTests.cpp  README.md
tools/: README.md
(+235 files in other folders)
