add_subdirectory(gems/PeterCore)
add_subdirectory(gems/PeterTraversal)
add_subdirectory(gems/PeterCombat)
add_subdirectory(gems/PeterAI)
add_subdirectory(gems/PeterInventory)
add_subdirectory(gems/PeterProgression)
add_subdirectory(gems/PeterWorkshop)
add_subdirectory(gems/PeterWorld)
add_subdirectory(gems/PeterUI)
add_subdirectory(gems/PeterTelemetry)
add_subdirectory(gems/PeterDebug)
add_subdirectory(gems/PeterValidation)
add_subdirectory(gems/PeterTools)
add_subdirectory(app)
